webook-fe/k8s-webook-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webook-fe
  template:
    metadata:
      labels:
        app: webook-fe
    spec:
      containers:
        - name: webook-fe
          image: could/webook-fe:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
