webook-fe/k8s-ingress-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-fe-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: live.webook.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webook-fe
                port:
                  number: 89
